# libiamf

./: .gitattributes  .gitignore  build.ps1  vcpkg.json
.github/: debug.sh
.github/workflows/: apply-patches.sh  clone.yml  normalize.py  replay.py  util.py
code/: AUTHORS.TXT  CMakeLists.txt  config.cmake.in  iamf.pc.in
code/cmake/: FindFDKAAC.cmake  export_pc.cmake
code/dep_codecs/: README.txt
code/dep_external/include/bear/: iamf_bear_api.h
code/dep_external/include/resonance/: iamf_resonance_api.h
code/dep_external/src/binaural/bear/: 0001-patch-fix-cmake.patch  0002-patch-submodule-pointer.patch  0003-patch-fix-cmake.patch
code/dep_external/src/binaural/iamf2bear/: CMakeLists.txt  config.cmake.in  iamf2bear.cpp  iamf_bear_api.h
code/dep_external/src/binaural/iamf2resonance/: CMakeLists.txt  config.cmake.in  iamf2resonance.cc  iamf_resonance_api.h  resonance_audio_api2.cc  resonance_audio_api2.h
code/dep_external/src/binaural/resource-audio/: 0001-patch-fix-cmake.patch
code/dep_external/src/binaural/visr/: 0001-patch-update-boost.patch  0002-patch-fix-cmake.patch
code/dep_external/src/wav/: CMakeLists.txt  config.cmake.in  dep_wavwriter.c
code/include/: IAMF_defines.h  vlogging_tool_sr.h
code/src/common/: wavreader2.c  wavreader2.h  wavwriter2.c  wavwriter2.h
code/src/iamf_dec/: IAMF_debug_sr.c  h2b_rdr.c  m2b_rdr.c  vlogging_tool_sr.c
code/test/tools/iamfdec/: CMakeLists.txt
code/test/tools/iamfdec/include/: vlogging_iamfmp4_sr.h
code/test/tools/iamfdec/src/: vlogging_iamfmp4_sr.c
code/test/tools/iamfplayer/include/: vlogging_iamfmp4_sr.h
code/test/tools/iamfplayer/src/: vlogging_iamfmp4_sr.c
